[FIX] web_studio: allow removal of empty o_td_label
Steps to reproduce
==================

- Install sale_management,web_studio
- Go to Sales
- Open any record that has the "Order Date" displayed
- Open studio
- Click on the Order Date field
- Remove it
- Click on the Order Date label
- Remove it
- Save and exit studio

=> Remaining fields are not aligned with their label anymore

Cause of the issue
==================

The Order Date label was inside a div that is now empty

Solution
========

We can now remove empty o_td_label from within studio
It is displayed in the same style as invisible elements

opw-3819667

closes odoo/enterprise#69579

X-original-commit: 561fbf09a6ba316190bda5e3e2202780ae055ff3

--- a/web_studio/static/src/client_action/view_editor/view_editor.scss
+++ b/web_studio/static/src/client_action/view_editor/view_editor.scss
@@ -28,7 +28,14 @@
             .o_web_studio_widget_empty {
                 background-color: $o-web-studio-bg-lighter;
             }
-            .o_web_studio_show_invisible, .o_web_studio_show_invisible + .o-web-studio-element-ghost {
+
+            div.o_td_label:empty {
+                &::before {
+                    content: '\00a0';
+                }
+            }
+
+            .o_web_studio_show_invisible, .o_web_studio_show_invisible + .o-web-studio-element-ghost, div.o_td_label:empty {
                 outline: 1px solid #00000010;
                 background-image: repeating-linear-gradient(
                     45deg,
